# pict-rs

./: .drone.yml  .gitignore  Cargo.toml  README.md  defaults.toml  deny.toml  dev.toml  flake.nix  migrate.toml  pict-rs.nix  pict-rs.toml  shell.nix
.cargo/: config
.forgejo/actions/build-amd64/: Dockerfile  action.yaml  entrypoint.sh
.forgejo/actions/prepare-rust/: action.yaml
.forgejo/workflows/: check.yaml  publish.yaml
client-examples/bash/: upload.sh
docker/dev/: Dockerfile  Dockerfile.amd64  Dockerfile.arm32v7  Dockerfile.arm64v8  dev.sh  docker-compose.yml
docker/drone/: Dockerfile  manifest.tmpl
docker/forgejo/: Dockerfile
docker/object-storage/: Dockerfile  Dockerfile.postgres  dev.sh  docker-compose.yml  garage-local.toml  garage.toml  migrate.toml  pict-rs-minio.toml  pict-rs.toml  setup-garage.sh  setup-tls.sh
docker/prod/: Dockerfile  Dockerfile.amd64  Dockerfile.arm32v7  Dockerfile.arm64v8  build-image.sh  deploy.sh  docker-compose.yml  manifest.sh
docker/prod/root/usr/lib/ImageMagick-7.0.11/config-Q16HDRI/: policy.xml
docker/prod/root/usr/lib/ImageMagick-7.1.0/config-Q16HDRI/: policy.xml
docker/prod/root/usr/lib/ImageMagick-7.1.1/config-Q16HDRI/: policy.xml
docker/prod/root/usr/local/lib/ImageMagick-7.0.11/config-Q16HDRI/: policy.xml
docker/prod/root/usr/local/lib/ImageMagick-7.1.0/config-Q16HDRI/: policy.xml
docs/: postgres-planning.md  postgres.md  ubuntu-and-debian.md
nix/pkgs/ffmpeg_pict-rs/: default.nix
nix/pkgs/imagemagick_pict-rs/: default.nix
releases/: 0.4.0.md  0.4.1.md  0.4.2.md  0.4.3.md  0.4.4.md  0.4.5.md  0.4.6.md  0.4.7.md  0.4.8.md  0.5.0.md  0.5.1.md  0.5.10.md  0.5.11.md  0.5.12.md  0.5.13.md  0.5.14.md  0.5.15.md  0.5.16.md  0.5.17-pre.1.md  0.5.17-pre.2.md  0.5.2.md  0.5.3.md  0.5.4.md  0.5.5.md  0.5.6.md  0.5.7.md  0.5.8.md  0.5.9.md
scripts/: setup-tls.sh  update-schema.sh
src/: backgrounded.rs  blurhash.rs  bytes_stream.rs  concurrent_processor.rs  config.rs  details.rs  discover.rs  either.rs  error.rs  error_code.rs  exiftool.rs  exiv2.rs  ffmpeg.rs  file.rs  file_path.rs  formats.rs  future.rs  generate.rs  http1.rs  id_or_span.rs  ingest.rs  init_metrics.rs  init_tracing.rs  lib.rs  magick.rs  main.rs  map_error.rs  middleware.rs  migrate.rs  migrate_store.rs  process.rs  processor.rs  queue.rs  range.rs  read.rs  repo.rs  repo_04.rs  root_span_builder.rs  serde_str.rs  state.rs  (+7 more)
src/config/: commandline.rs  defaults.rs  file.rs  primitives.rs
src/discover/: exiftool.rs  ffmpeg.rs  magick.rs
src/discover/ffmpeg/: ffprobe_6_0_animated_avif_details.json  ffprobe_6_0_animated_webp_details.json  ffprobe_6_0_apng_details.json  ffprobe_6_0_avif_details.json  ffprobe_6_0_gif_details.json  ffprobe_6_0_jpeg_details.json  ffprobe_6_0_jxl_details.json  ffprobe_6_0_mov_details.json  ffprobe_6_0_mp4_av1_details.json  ffprobe_6_0_mp4_details.json  ffprobe_6_0_png_details.json  ffprobe_6_0_webm_av1_details.json  ffprobe_6_0_webp_details.json  tests.rs
src/discover/magick/: magick_7_1_1_animated_webp_details.json  magick_7_1_1_avif_details.json  magick_7_1_1_jpeg_details.json  magick_7_1_1_mp4_details.json  magick_7_1_1_png_details.json  magick_7_1_1_webm_details.json  magick_7_1_1_webp_details.json  tests.rs
src/ffmpeg/: ffprobe_6_0_gif_details.json  ffprobe_6_0_jpeg_details.json  ffprobe_6_0_jxl_details.json  ffprobe_6_0_mp4_details.json  ffprobe_6_0_pixel_formats.json  ffprobe_6_0_webm_av1_details.json  ffprobe_6_0_webm_details.json  tests.rs
src/formats/: animation.rs  image.rs  mimes.rs  video.rs
src/generate/: ffmpeg.rs  magick.rs
src/ingest/: hasher.rs  validate.rs
src/ingest/validate/: exiftool.rs  ffmpeg.rs
src/magick/: magick_7_1_1_gif_details.json  magick_7_1_1_jxl_details.json  tests.rs
src/middleware/: deadline.rs  internal.rs  log.rs  metrics.rs  payload.rs
src/migrate/: mod.rs  s032.rs  s034.rs
src/queue/: cleanup.rs  process.rs
src/repo/: alias.rs  delete_token.rs  hash.rs  metrics.rs  migrate.rs  notification_map.rs  old.rs  postgres.rs  sled.rs
src/repo/old/: migrate.rs
src/repo/old/migrate/: s034.rs
src/repo/postgres/: embedded.rs  job_status.rs  schema.rs
src/repo/postgres/migrations/: V0000__enable_pgcrypto.rs  V0001__create_hashes.rs  V0002__create_variants.rs  V0003__create_aliases.rs  V0004__create_settings.rs  V0005__create_details.rs  V0006__create_queue.rs  V0007__create_store_migrations.rs  V0008__create_proxies.rs  V0009__create_uploads.rs  V0010__add_queue_time_index_to_job_queue.rs  V0011__add_unique_name_jobs.rs  V0012__add_blurhash_to_hashes.rs  V0013__add_retry_count_to_jobs.rs  V0014__add_keyed_notifications.rs
src/repo/sled/: bucket.rs  datetime.rs
src/repo_04/: sled.rs
src/store/: file_store.rs  object_store.rs
src/store/file_store/: file.rs  file_id.rs  restructure.rs
src/store/object_store/: object_id.rs
src/upload_manager/: hasher.rs  mod.rs  restructure.rs  session.rs
src/validate/: exiftool.rs  ffmpeg.rs  magick.rs  mod.rs  transcode.rs
systemd/: pict-rs.service
